fix: fix the alignment issues of test on both desktop and mobile

--- a/root/css/about.css
+++ b/root/css/about.css
@@ -135,7 +135,7 @@ body.light-mode #ending-msg:hover
         font-size: 1.15rem;
         letter-spacing: 0.12em;
         margin-top: 40px;
-        margin-bottom: 120px !important;
+        margin-bottom: 40px;
     }
     #ending-msg::after {
         width: 8px;
