--- a/root/css/todo.css
+++ b/root/css/todo.css
@@ -37,17 +37,10 @@
     align-content: start;
 }
 
-#app-container
-{
-    width: 100%;
-    max-width: 1400px;
-    padding: 0 40px;
-    margin: 0 auto;
-}
-
 #todo-view
 {
     width: 100%;
+    max-width: 1600px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
